--- a/app/src/main/res/layout/activity_inbox.xml
+++ b/app/src/main/res/layout/activity_inbox.xml
@@ -61,6 +61,7 @@
         app:layout_constraintVertical_bias="0.142" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rc_inbox_messages"
         android:layout_width="389dp"
         android:layout_height="542dp"
         app:layout_constraintBottom_toBottomOf="parent"
