--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="green">#1DB954</color>
+    <color name="colorGray">#D3D3D3</color>
+    <color name="red">#FF0000</color>
+
 </resources>
