--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="green">#1DB954</color>
     <color name="colorGray">#D3D3D3</color>
+    <color name="darkgray">#636363</color>
     <color name="red">#FF0000</color>
 
 </resources>
