Added requests list

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="colorGray">#D3D3D3</color>
     <color name="darkgray">#636363</color>
     <color name="red">#FF0000</color>
+    <color name="niceGreen">#306844</color>
+
 
 </resources>
