--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -16,4 +16,14 @@
         android:layout_height="wrap_content"
         android:text="Login Page (will be changed at the end)" />
 
+    <Button
+        android:id="@+id/logout_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/red"
+        android:textColor="@color/white"
+        android:text="Log out"
+        android:layout_marginVertical="50dp"
+        />
+
 </LinearLayout>
