--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -102,7 +102,7 @@
             android:background="@drawable/baseline_skip_next_24" />
 
         <Button
-            android:id="@+id/play_menu_btn"
+            android:id="@+id/play_stop_btn"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginLeft="16dp"
