--- a/app/src/main/res/layout/compose_message.xml
+++ b/app/src/main/res/layout/compose_message.xml
@@ -45,7 +45,7 @@
         app:layout_constraintVertical_bias="0.104" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/etxt_cm_message"
         android:layout_width="270dp"
         android:layout_height="217dp"
         android:ems="10"
@@ -59,7 +59,7 @@
         app:layout_constraintVertical_bias="0.253" />
 
     <EditText
-        android:id="@+id/editTextText2"
+        android:id="@+id/etxt_cm_receiver"
         android:layout_width="206dp"
         android:layout_height="43dp"
         android:ems="10"
@@ -73,7 +73,7 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <EditText
-        android:id="@+id/editTextText3"
+        android:id="@+id/etxt_cm_subject"
         android:layout_width="183dp"
         android:layout_height="45dp"
         android:layout_marginTop="12dp"
@@ -85,7 +85,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/txt_cm_subject"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText2"
+        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_receiver"
         app:layout_constraintVertical_bias="0.009" />
 
     <Button
@@ -97,7 +97,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.125"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_message"
         app:layout_constraintVertical_bias="0.07" />
 
     <Button
@@ -109,6 +109,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toEndOf="@+id/btn_cm_cancel"
-        app:layout_constraintTop_toBottomOf="@+id/editTextText"
+        app:layout_constraintTop_toBottomOf="@+id/etxt_cm_message"
         app:layout_constraintVertical_bias="0.07" />
 </androidx.constraintlayout.widget.ConstraintLayout>
