--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -35,4 +35,14 @@
         android:layout_marginBottom="100dp"
         android:clickable="true"
         app:srcCompat="@drawable/baseline_playlist_play_24" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/play"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="115dp"
+        android:layout_marginBottom="100dp"
+        android:clickable="true"
+        app:srcCompat="@drawable/single_artist_icon" />
 </RelativeLayout>
