--- a/app/src/main/res/layout/item_music_play.xml
+++ b/app/src/main/res/layout/item_music_play.xml
@@ -15,7 +15,7 @@
         android:src="@mipmap/ic_launcher" />
 
     <TextView
-        android:id="@+id/tv_name"
+        android:id="@+id/song_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
@@ -29,10 +29,10 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/tv_author"
+        android:id="@+id/song_artist"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tv_name"
+        android:layout_below="@id/song_title"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:layout_toRightOf="@id/siv_img"
