Fixed song upload

--- a/app/src/main/res/layout/dialog_file_picker.xml
+++ b/app/src/main/res/layout/dialog_file_picker.xml
@@ -28,12 +28,12 @@
         android:paddingTop="50dp"
         android:visibility="gone" />
 
-    <EditText
-        android:id="@+id/edit_artist_name"
+    <Spinner
+        android:id="@+id/artists_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter artist name"
-        android:paddingVertical="15dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="50dp"
         android:visibility="gone" />
 
     <Spinner
