Added Songs in profile page

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="darkgray">#636363</color>
     <color name="red">#FF0000</color>
     <color name="niceGreen">#306844</color>
+    <color name="lightYellow">#fffec8</color>
 
 
 </resources>
