--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,5 +8,20 @@
         <item name="strokeWidth">1dp</item>
     </style>
 
+    <style name="MenuTextAppearance" parent="TextAppearance.AppCompat.Widget.ActionBar.Menu">
+        <item name="android:textColor">@color/red</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+    <style name="CustomToolbarMenu" parent="Widget.AppCompat.ActionButton.Overflow">
+        <item name="android:paddingTop">76dp</item>
+    </style>
+
+    <style name="MyToolbarStyle" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorSecondary">@color/red</item>
+    </style>
+
+
+
 
 </resources>
