--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -34,10 +34,12 @@
         android:layout_marginStart="15dp"
         android:layout_marginBottom="100dp"
         android:clickable="true"
+        android:visibility="gone"
         app:srcCompat="@drawable/baseline_playlist_play_24" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/play"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
