--- a/app/src/main/res/layout/activity_play_list.xml
+++ b/app/src/main/res/layout/activity_play_list.xml
@@ -4,7 +4,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingTop="30dp"
+    android:background="@color/black"
+    android:backgroundTint="@color/black"
+    >
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Your Playlist"
+            android:textColor="@color/white"
+            android:textSize="28sp"
+            android:gravity="center" />
+    </LinearLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/playList"
@@ -12,6 +35,27 @@
         android:layout_height="match_parent"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:reverseLayout="false"
-        tools:listitem="@layout/item_music_play" />
+        tools:listitem="@layout/item_music_play"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/no_list_msg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Why so empty!? Start adding some songs."
+        android:textColor="@color/colorGray"
+        android:textSize="15sp"
+        android:gravity="center" />
+
+    </LinearLayout>
+
+
 
 </LinearLayout>
