--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -20,6 +20,7 @@
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:padding="16dp"
+        android:scrollbars="none"
     >
 
         <LinearLayout
