--- a/app/src/main/res/layout/item_song_card.xml
+++ b/app/src/main/res/layout/item_song_card.xml
@@ -28,13 +28,13 @@
             android:orientation="horizontal">
 
 
-            <ImageButton
+            <ImageView
                 android:id="@+id/btn_play_pause"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginRight="20dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/pauset" />
+                android:background="@drawable/rounded_rectangle"
+                android:src="@drawable/song_playing" />
 
 
             <LinearLayout
