--- a/app/src/main/res/layout/item_music_play.xml
+++ b/app/src/main/res/layout/item_music_play.xml
@@ -26,14 +26,15 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-
             <ImageView
                 android:id="@+id/icon_isplaying"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginRight="20dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:src="@drawable/song_playing" />
+                android:background="@drawable/rounded_rectangle"
+                android:padding="10dp"
+                android:src="@drawable/song_playing"
+                android:scaleType="centerCrop" />
 
 
             <LinearLayout
